# stk

./: .clang-format  .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  convex_hull_demo.cpp  covariance_matrix.cpp  graph_adjacency.cpp  graph_search.cpp  knapsack.cpp  lp_diet.cpp  lu_dcmp.cpp  tree_traversal.cpp  valmat.cpp
examples/data/: input_01.csv  input_02.csv  input_03.csv
examples/data/knapsack/: input_bkp_01.txt  input_zero_one_01.txt
stk/: CMakeLists.txt
stk/include/stk/: concepts.h  la.h  stat.h  utils.h
stk/include/stk/algorithms/: convex_hull.h  lu.h  svd.h
stk/include/stk/algorithms/impl/: convex_hull.ipp  lu.ipp  svd.ipp
stk/include/stk/algorithms/visitor/: base_visitor.h  bfs.h  binary_tree_traversal.h  dfs.h  visitor.h
stk/include/stk/ds/: matrix.h  vector.h
stk/include/stk/ds/graph/: graph.h
stk/include/stk/ds/graph/impl/: graph.ipp
stk/include/stk/ds/impl/: matrix.ipp  vector.ipp
stk/include/stk/geometry/: edge.h  point.h
stk/include/stk/geometry/impl/: edge.ipp  point.ipp
stk/include/stk/graph/: basic_graph.h  edge.h  graph.h  vertex.h
stk/include/stk/graph/impl/: basic_graph.ipp  edge.ipp  vertex.ipp
stk/include/stk/io/: csv.h
stk/include/stk/io/impl/: csv.ipp
stk/include/stk/opt/: linear_regression.h  model.h  result.h
stk/include/stk/opt/impl/: linear_regression.ipp  model.ipp
stk/include/stk/opt/impl/regression/: linear.ipp
stk/include/stk/opt/knapsack/: input.h  model.h  model_factory.h  result.h  solution.h  solver.h
stk/include/stk/opt/knapsack/impl/: input.ipp
stk/include/stk/opt/regression/: linear.h
stk/include/stk/stat/: ttest.h
test/: CMakeLists.txt  la_test.cpp  lu_test.cpp  matrix_test.cpp  stat_test.cpp  test_stat.cpp  test_svd.cpp  test_vector.cpp  vector_test.cpp
test/opt/: CMakeLists.txt  linear_regression_test.cpp  test_linear_regression.cpp
test/stat/: CMakeLists.txt  test_ttest.cpp
